[B]Version 1.1.34[/B]
animeidhentai - playback fix
xhamster - thumbnails fixed
bongacams - fixed
uflash - new site