@@ -3,3 +3,4 @@ animeidhentai - playback fix
 xhamster - thumbnails fixed
 bongacams - fixed
 uflash - new site
+camsoda - fix thumbnails and playback
